2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 543244 – crashes when renaming a bookmark

	* gtk/gtkfilesystem.c (_gtk_file_system_set_bookmark_label): Don't
	free a GFile. Reported by Sebastien Bacher

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 339591 – Detect list of availible cover pages

	Patch by Marek Kasik:
	* modules/printbackends/cups/gtkprintbackendcups.c: Get the list of
	available cover pages and the default front and back cover pages 
	from the cups server.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 384940 – handle rejecting jobs and authentication meaningfully

	Patch by Marek Kasik, icons by Mike Langlie:
	* gtk/gtk.symbols:
	* gtk/gtkprintbackend.h:
	* gtk/gtkprinter.[hc]: Add new paused and accepting-jobs properties
	and getters/setters.

	* gtk/gtkstock.h:
	* gtk/gtkiconfactory.c:
	* gtk/Makefile.am:
	* gtk/stock-icons/{16,24}/gtk-print-paused.{png,svg}: New icon.

	* modules/printbackends/cups/gtkprintbackendcups.c: 
	* gtk/gtkprintunixdialog.c: Handle paused and job-rejecting 
	printers.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Add a test to see if GIO can sniff image data,
	this should make gdk-pixbuf use its own sniffing again, on OS X.

2008-07-15  Xavier Claessens  <xclaesse@gmail.com>

	Bug 542523 – GtkTextTag should handle setting properties to NULL

	* gtk/gtktexttag.c (gtk_text_tag_set_property): Unset the color when
	setting it to NULL instead of displaying a warning.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 479780 – Bookmarks in left pane of FileChooser cannot be renamed

	* gtk/gtkfilechooserdefault.c (shortcuts_build_popup_menu):
	Call shortcuts_check_popup_sensitivity() every time the
	menu is popped up. Problem reported by Hong Jen Yee
	
2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 488766 – GtkFileChooserButton doesn't clear icon after
	gtk_file_chooser_unselect_all

	* gtk/gtkfilechooserbutton.c (update_label_and_image): Unset